== Release notes

Every release contains many small fixes.

=== next

=== 1.24.0.0
* Push for WebSocket Frontend (for Switch and Text component)

=== 1.23.0.0
* Refactor Page authorization

=== 1.22.0.0
* Use JDK web server and remove dependency to NanoHttpd
* add ext projects thymeleaf, MinimalTow, NanoHttpd
* SmallCodeListFormElement: comma separated code list in a row

=== 1.21.0.0
* Json Frontend: real context menu (instead actions on the right)
* Upgrade dialog-polyfill: should fix ie

=== 1.20.0.0
* Refactor Routing
* Table Pages: no need to pass columns in constructor
* PageStore: limit history length
* Html Frontend: Exception handling
* Html Frontend: handling of long during actions
* Frontend: split html content in url / html

=== 1.19.1.0
* JsonFrontend: better meta information and title
* SwingFrontend: Lookup button fix

=== 1.19.0.0
* Redesign Frontend.createList

=== 1.18.0.0
* Repository: delete by criteria. Change signature of 'count'
* Form: support for PasswordFormElement

=== 1.17.0.0
* Form: read only wrapper
* Backend: support for PostgreSql

=== 1.16.0.0
* Extract use of JavaFx in ext project
* Material design: dropdown triangle
* more consistent date parsing
* Redesign form interface, add GROW_FIRST (column)

=== 1.15.0.0
* historized sql repository: complete support historized references (and lists)
* Remove RenderType. Redesign Rendering concept
* Redesign Lookup UI concept
* validation refactoring
* JsonImage : image upload in JsonFrontend
* Rename NanoWebServer to WebServer

=== 1.14.0.0
* Allow wizards to have a last step without active next button
* HtmlFrontend: add close button to dialogs

=== 1.13.0.0
* Sorting for completely loaded tables
* SimpleTablePageWithDetail more helper methods
* HtmlFrontend: more dynamic layout
* Materialized getters (@Materialized)

=== 1.12.0.0
* Codes: clear cache when write a code
* Upgrade to Lanterna 3

=== 1.11.0.0
* Application: Declare Resources with Bundles, not with Strings