@@ -6,27 +6,27 @@
     "@polymer/iron-list": "3.0.2",
     "@polymer/polymer": "3.2.0",
     "@vaadin/flow-frontend": "./target/flow-frontend",
-    "@vaadin/router": "^1.6.0",
+    "@vaadin/router": "1.7.2",
     "@vaadin/vaadin-accordion": "1.1.0",
     "@vaadin/vaadin-app-layout": "2.1.0",
     "@vaadin/vaadin-board": "2.1.1",
     "@vaadin/vaadin-button": "2.3.0",
-    "@vaadin/vaadin-charts": "6.3.0",
+    "@vaadin/vaadin-charts": "6.3.1",
     "@vaadin/vaadin-checkbox": "2.3.0",
-    "@vaadin/vaadin-combo-box": "5.1.0",
-    "@vaadin/vaadin-confirm-dialog": "1.2.0",
+    "@vaadin/vaadin-combo-box": "5.1.1",
+    "@vaadin/vaadin-confirm-dialog": "1.2.1",
     "@vaadin/vaadin-context-menu": "4.4.0",
     "@vaadin/vaadin-cookie-consent": "1.1.2",
-    "@vaadin/vaadin-core-shrinkwrap": "16.0.0-beta1",
-    "@vaadin/vaadin-crud": "1.2.0",
+    "@vaadin/vaadin-core-shrinkwrap": "16.0.2",
+    "@vaadin/vaadin-crud": "1.2.1",
     "@vaadin/vaadin-custom-field": "1.1.0",
-    "@vaadin/vaadin-date-picker": "4.1.0",
+    "@vaadin/vaadin-date-picker": "4.1.1",
     "@vaadin/vaadin-date-time-picker": "1.1.0",
     "@vaadin/vaadin-details": "1.1.0",
-    "@vaadin/vaadin-dialog": "2.4.0",
+    "@vaadin/vaadin-dialog": "2.4.3",
     "@vaadin/vaadin-form-layout": "2.2.0",
-    "@vaadin/vaadin-grid": "5.6.1",
-    "@vaadin/vaadin-grid-pro": "2.1.0",
+    "@vaadin/vaadin-grid": "5.6.6",
+    "@vaadin/vaadin-grid-pro": "2.1.1",
     "@vaadin/vaadin-icons": "4.3.1",
     "@vaadin/vaadin-item": "2.2.0",
     "@vaadin/vaadin-list-box": "1.3.0",
@@ -38,13 +38,13 @@
     "@vaadin/vaadin-ordered-layout": "1.3.0",
     "@vaadin/vaadin-progress-bar": "1.2.0",
     "@vaadin/vaadin-radio-button": "1.3.0",
-    "@vaadin/vaadin-rich-text-editor": "1.2.0",
+    "@vaadin/vaadin-rich-text-editor": "1.2.2",
     "@vaadin/vaadin-select": "2.2.0",
-    "@vaadin/vaadin-shrinkwrap": "16.0.0-beta1",
+    "@vaadin/vaadin-shrinkwrap": "16.0.2",
     "@vaadin/vaadin-split-layout": "4.2.0",
     "@vaadin/vaadin-tabs": "3.1.0",
-    "@vaadin/vaadin-text-field": "2.6.0",
-    "@vaadin/vaadin-time-picker": "2.1.0",
+    "@vaadin/vaadin-text-field": "2.6.2",
+    "@vaadin/vaadin-time-picker": "2.1.1",
     "@vaadin/vaadin-upload": "4.3.0",
     "lit-element": "^2.2.1",
     "mkdirp": "^1.0.4"
@@ -64,52 +64,53 @@
     "typescript": "3.8.3",
     "terser": "4.6.7",
     "progress-webpack-plugin": "0.0.24",
-    "lit-element": "2.3.1"
+    "lit-element": "2.3.1",
+    "chokidar": "^3.4.0"
   },
   "vaadin": {
     "dependencies": {
-      "@vaadin/router": "^1.6.0",
+      "@vaadin/router": "1.7.2",
       "@polymer/polymer": "3.2.0",
       "@webcomponents/webcomponentsjs": "^2.2.10",
-      "@vaadin/vaadin-crud": "1.2.0",
-      "@vaadin/vaadin-grid": "5.6.1",
+      "@vaadin/vaadin-crud": "1.2.1",
+      "@vaadin/vaadin-grid": "5.6.6",
       "@vaadin/vaadin-icons": "4.3.1",
       "@vaadin/vaadin-split-layout": "4.2.0",
-      "@vaadin/vaadin-combo-box": "5.1.0",
+      "@vaadin/vaadin-combo-box": "5.1.1",
       "@vaadin/vaadin-cookie-consent": "1.1.2",
-      "@vaadin/vaadin-core-shrinkwrap": "16.0.0-beta1",
+      "@vaadin/vaadin-core-shrinkwrap": "16.0.2",
       "@vaadin/vaadin-upload": "4.3.0",
-      "@vaadin/vaadin-dialog": "2.4.0",
+      "@vaadin/vaadin-dialog": "2.4.3",
       "@vaadin/vaadin-select": "2.2.0",
       "@vaadin/vaadin-app-layout": "2.1.0",
       "@vaadin/vaadin-item": "2.2.0",
       "@vaadin/vaadin-board": "2.1.1",
       "@vaadin/vaadin-notification": "1.5.0",
-      "@vaadin/vaadin-charts": "6.3.0",
-      "@vaadin/vaadin-grid-pro": "2.1.0",
+      "@vaadin/vaadin-charts": "6.3.1",
+      "@vaadin/vaadin-grid-pro": "2.1.1",
       "@vaadin/vaadin-progress-bar": "1.2.0",
-      "@vaadin/vaadin-shrinkwrap": "16.0.0-beta1",
+      "@vaadin/vaadin-shrinkwrap": "16.0.2",
       "@vaadin/vaadin-ordered-layout": "1.3.0",
       "@vaadin/vaadin-login": "1.1.0",
       "@vaadin/vaadin-button": "2.3.0",
-      "@vaadin/vaadin-date-picker": "4.1.0",
-      "@vaadin/vaadin-text-field": "2.6.0",
+      "@vaadin/vaadin-date-picker": "4.1.1",
+      "@vaadin/vaadin-text-field": "2.6.2",
       "@vaadin/vaadin-menu-bar": "1.1.0",
       "@vaadin/vaadin-form-layout": "2.2.0",
       "@vaadin/vaadin-accordion": "1.1.0",
       "@polymer/iron-list": "3.0.2",
-      "@vaadin/vaadin-confirm-dialog": "1.2.0",
+      "@vaadin/vaadin-confirm-dialog": "1.2.1",
       "@vaadin/vaadin-list-box": "1.3.0",
       "@vaadin/vaadin-checkbox": "2.3.0",
       "@vaadin/vaadin-details": "1.1.0",
       "@polymer/iron-icon": "3.0.1",
-      "@vaadin/vaadin-time-picker": "2.1.0",
+      "@vaadin/vaadin-time-picker": "2.1.1",
       "@vaadin/vaadin-context-menu": "4.4.0",
       "@vaadin/vaadin-tabs": "3.1.0",
       "@vaadin/vaadin-radio-button": "1.3.0",
       "@vaadin/vaadin-lumo-styles": "1.6.0",
       "@vaadin/vaadin-material-styles": "1.3.2",
-      "@vaadin/vaadin-rich-text-editor": "1.2.0",
+      "@vaadin/vaadin-rich-text-editor": "1.2.2",
       "@vaadin/vaadin-custom-field": "1.1.0",
       "@vaadin/vaadin-date-time-picker": "1.1.0"
     },
@@ -128,8 +129,9 @@
       "webpack-dev-server": "3.10.3",
       "terser": "4.6.7",
       "progress-webpack-plugin": "0.0.24",
-      "lit-element": "2.3.1"
+      "lit-element": "2.3.1",
+      "chokidar": "^3.4.0"
     },
-    "hash": "a5e0213bad6ec8c1e23b674b0eb15344c77127a47774749511726155f863d3bd"
+    "hash": "216356af32d5cc2231976551ae2358264d5a39af1dc76b7fd35a8b3e3f661a09"
   }
 }
