@@ -16,7 +16,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
-		<vaadin.version>16.0.0.beta1</vaadin.version>
+		<vaadin.version>16.0.2</vaadin.version>
 	</properties>
 
 	<parent>
