@@ -96,13 +96,6 @@
 		<resources>
 			<resource>
 				<directory>src/main/resources</directory>
-				<excludes>
-					<exclude>**/*.cer</exclude>
-					<exclude>**/*.jks</exclude>
-				</excludes>
-			</resource>
-			<resource>
-				<directory>src/main/webapp</directory>
 			</resource>
 		</resources>
 		<testResources>
